crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@object_comp.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analyze_tests/object_comp.jsonnet
---
--- source ---
{ [k]: k for k in ['a', 'b'] }
--- root analysis ---
object_dependent_depth: none
local_dependent_depth: 0
errored: false
--- diagnostics ---
--- lir ---
Obj(
    ObjComp(
        LObjComp {
            this: None,
            set_dollar: false,
            uses_super: false,
            locals: [],
            field: LFieldMember {
                name: Dyn(
                    Local(
                        LocalId(
                            0,
                        ),
                    ),
                ),
                plus: false,
                visibility: Normal,
                value: Local(
                    LocalId(
                        0,
                    ),
                ),
            },
            compspecs: [
                For {
                    destruct: Full(
                        LocalId(
                            0,
                        ),
                    ),
                    over: Arr(
                        [
                            Str(
                                "a",
                            ),
                            Str(
                                "b",
                            ),
                        ],
                    ),
                    loop_invariant: true,
                },
            ],
        },
    ),
)
