crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@object_self.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analyze_tests/object_self.jsonnet
---
--- source ---
{ a: 1, b: self.a }
--- root analysis ---
object_dependent_depth: 0
local_dependent_depth: 0
errored: false
--- diagnostics ---
--- lir ---
Obj(
    MemberList(
        LObjMembers {
            this: Some(
                LocalId(
                    0,
                ),
            ),
            set_dollar: false,
            uses_super: false,
            locals: [],
            asserts: [],
            fields: [
                LFieldMember {
                    name: Fixed(
                        "a",
                    ),
                    plus: false,
                    visibility: Normal,
                    value: Num(
                        1.0,
                    ),
                },
                LFieldMember {
                    name: Fixed(
                        "b",
                    ),
                    plus: false,
                    visibility: Normal,
                    value: Index {
                        indexable: Local(
                            LocalId(
                                0,
                            ),
                        ),
                        parts: [
                            LIndexPart {
                                span: virtual:<test>:16-17,
                                value: Str(
                                    "a",
                                ),
                            },
                        ],
                    },
                },
            ],
        },
    ),
)
