crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@super_outside_object.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/super_outside_object.jsonnet
---
--- source ---
super.a
--- root analysis ---
object_dependent_depth: none
local_dependent_depth: none
errored: true
--- diagnostics ---
   · ╭────── `super` used outside of object
1  │ super.a 
2  │  
--- lir ---
Index {
    indexable: BadLocal(
        "super",
    ),
    parts: [
        LIndexPart {
            span: virtual:<test>:6-7,
            value: Str(
                "a",
            ),
        },
    ],
}
