crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@super_usage.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/super_usage.jsonnet
---
--- source ---
{ a: 1, b: 2 } + { a: super.a + 10, c: self.b }
--- root analysis ---
object_dependent_depth: 0
local_dependent_depth: 0
errored: false
--- diagnostics ---
--- lir ---
BinaryOp {
    lhs: Obj(
        StaticMembers(
            LObjStaticMembers {
                frame_shape: ClosureShape {
                    captures: [],
                    n_locals: 1,
                },
                this: None,
                set_dollar: false,
                uses_super: false,
                locals: [],
                asserts: None,
                shape: ObjShape {
                    fields: [
                        ShapeField {
                            name: "a",
                            flags: ObjFieldFlags {
                                add: false,
                                visibility: Normal,
                            },
                            location: None,
                            index: FieldIndex(
                                (),
                            ),
                        },
                        ShapeField {
                            name: "b",
                            flags: ObjFieldFlags {
                                add: false,
                                visibility: Normal,
                            },
                            location: None,
                            index: FieldIndex(
                                (),
                            ),
                        },
                    ],
                },
                bindings: [
                    (
                        ClosureShape {
                            captures: [],
                            n_locals: 0,
                        },
                        Trivial(
                            Num(
                                1.0,
                            ),
                        ),
                    ),
                    (
                        ClosureShape {
                            captures: [],
                            n_locals: 0,
                        },
                        Trivial(
                            Num(
                                2.0,
                            ),
                        ),
                    ),
                ],
            },
        ),
    ),
    op: Add,
    rhs: Obj(
        StaticMembers(
            LObjStaticMembers {
                frame_shape: ClosureShape {
                    captures: [],
                    n_locals: 1,
                },
                this: Some(
                    LocalSlot(
                        0,
                    ),
                ),
                set_dollar: false,
                uses_super: true,
                locals: [],
                asserts: None,
                shape: ObjShape {
                    fields: [
                        ShapeField {
                            name: "a",
                            flags: ObjFieldFlags {
                                add: false,
                                visibility: Normal,
                            },
                            location: None,
                            index: FieldIndex(
                                (),
                            ),
                        },
                        ShapeField {
                            name: "c",
                            flags: ObjFieldFlags {
                                add: false,
                                visibility: Normal,
                            },
                            location: None,
                            index: FieldIndex(
                                (),
                            ),
                        },
                    ],
                },
                bindings: [
                    (
                        ClosureShape {
                            captures: [],
                            n_locals: 0,
                        },
                        BinaryOp {
                            lhs: Index {
                                indexable: Super,
                                parts: [
                                    LIndexPart {
                                        span: virtual:<test>:28-29,
                                        value: Trivial(
                                            Str(
                                                "a",
                                            ),
                                        ),
                                    },
                                ],
                            },
                            op: Add,
                            rhs: Trivial(
                                Num(
                                    10.0,
                                ),
                            ),
                        },
                    ),
                    (
                        ClosureShape {
                            captures: [],
                            n_locals: 0,
                        },
                        Index {
                            indexable: Slot(
                                Local(
                                    LocalSlot(
                                        0,
                                    ),
                                ),
                            ),
                            parts: [
                                LIndexPart {
                                    span: virtual:<test>:44-45,
                                    value: Trivial(
                                        Str(
                                            "b",
                                        ),
                                    ),
                                },
                            ],
                        },
                    ),
                ],
            },
        ),
    ),
}
