crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@undefined_var.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
assertion_line: 2175
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/undefined_var.jsonnet
---
--- source ---
y + 1
--- root analysis ---
object_dependent_depth: none
local_dependent_depth: none
errored: true
--- diagnostics ---
   · ╭── undefined local: y
1  │ y + 1 
2  │  
--- lir ---
BinaryOp {
    lhs: BadLocal(
        "ref",
    ),
    op: Add,
    rhs: Trivial(
        Num(
            1.0,
        ),
    ),
}
