crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@unused_local.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analyze_tests/unused_local.jsonnet
---
--- source ---
local unused = 1; 2
--- root analysis ---
object_dependent_depth: none
local_dependent_depth: none
errored: false
--- diagnostics ---
   ·       ╭─────── unused local: unused
1  │ local unused = 1; 2 
2  │  
--- lir ---
LocalExpr {
    binds: [
        LBind {
            destruct: Full(
                LocalId(
                    0,
                ),
            ),
            value: Num(
                1.0,
            ),
        },
    ],
    body: Num(
        2.0,
    ),
}
